[gd_scene load_steps=8 format=3 uid="uid://doefmek85em7s"]

[ext_resource type="Script" path="res://BattleScene.gd" id="1_g1ijt"]
[ext_resource type="PackedScene" uid="uid://djoqkn041ds2g" path="res://CombatCore/CombatCore.tscn" id="2_fwi32"]
[ext_resource type="PackedScene" uid="uid://crkv3v45urdvj" path="res://player.tscn" id="3_waaa0"]
[ext_resource type="PackedScene" uid="uid://d2evuh2ejf4f" path="res://EnemySystem/enemy.tscn" id="4_rq4sq"]
[ext_resource type="Resource" uid="uid://cnbrkx65wed7m" path="res://EnemySystem/Enemies/test_enemy.tres" id="5_6fo83"]
[ext_resource type="Resource" uid="uid://cvd1scv52myvx" path="res://EnemySystem/Enemies/test_enemy_2.tres" id="6_fvvkq"]
[ext_resource type="FontFile" uid="uid://5xyvrcahqhvm" path="res://UI/ark-pixel-16px-proportional-ja.ttf" id="7_5d7b1"]

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_g1ijt")

[node name="CombatCore" parent="." instance=ExtResource("2_fwi32")]
unique_name_in_owner = true

[node name="Player" parent="." instance=ExtResource("3_waaa0")]

[node name="Enemy1" parent="." instance=ExtResource("4_rq4sq")]
enemy_data = ExtResource("5_6fo83")

[node name="Enemy2" parent="." instance=ExtResource("4_rq4sq")]
enemy_data = ExtResource("6_fvvkq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="OutOfCombatUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BeginCombatButton" type="Button" parent="CanvasLayer/OutOfCombatUI"]
layout_mode = 0
offset_left = 165.0
offset_top = 225.0
offset_right = 305.0
offset_bottom = 305.0
theme_override_fonts/font = ExtResource("7_5d7b1")
theme_override_font_sizes/font_size = 16
text = "Begin Combat
Enemy 1"

[node name="BeginCombatButton2" type="Button" parent="CanvasLayer/OutOfCombatUI"]
layout_mode = 0
offset_left = 351.0
offset_top = 225.0
offset_right = 491.0
offset_bottom = 305.0
theme_override_fonts/font = ExtResource("7_5d7b1")
theme_override_font_sizes/font_size = 16
text = "Begin Combat
Enemy 2"

[connection signal="pressed" from="CanvasLayer/OutOfCombatUI/BeginCombatButton" to="." method="_on_begin_combat_button_pressed"]
[connection signal="pressed" from="CanvasLayer/OutOfCombatUI/BeginCombatButton2" to="." method="_on_begin_combat_button_2_pressed"]
